unpackaged/main/default/objects/Avalara_Service__mdt/Avalara_Service__mdt.object-meta.xml
<CustomObject>
    <description>Registry of Avalara AvaTax REST API v2 endpoints. Each record defines one API operation with its HTTP method, resource path, and documentation link. Used by AvalaraAuthProvider to resolve callout parameters without hardcoding paths in Apex.</description>
    <label>Avalara Service</label>
    <pluralLabel>Avalara Services</pluralLabel>
</CustomObject>