unpackaged/main/default/objects/Avalara_Service__mdt/fields/API_Reference__c.field-meta.xml
<CustomField>
    <fullName>API_Reference__c</fullName>
    <description>Link to the official Avalara API documentation for this endpoint.</description>
    <label>API Reference</label>
    <type>Url</type>
</CustomField>