unpackaged/main/default/objects/Avalara_Service__mdt/fields/Resource_Path__c.field-meta.xml
<CustomField>
    <fullName>Resource_Path__c</fullName>
    <description>Relative API path appended to the Named Credential base URL. Supports path variables in {placeholder} format (e.g., /api/v2/companies/{companyCode}/transactions/{transactionCode}/commit).</description>
    <label>Resource Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>